tests/baselines/reference/typeOfOnTypeArg.errors.txt
==== tests/cases/compiler/typeOfOnTypeArg.ts (2 errors) ====
    var A = { '': 3 };
    
    function fill<B extends typeof A>(f: B) {
    
    } 
    
    fill(32);
    ~~~~
!!! typeOfOnTypeArg.ts(7,1): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Type 'Number' is missing property '''' from type '{ '': number; }'.
    ~~~~
!!! typeOfOnTypeArg.ts(7,1): error TS2087: Could not select overload for 'call' expression.
    